[package]
name = "webcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
askama = "0.12.1"
actix-web-lab = "0.20.2"

