[package]
name = "webcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.21"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
futures = "0.3.30"
askama = "0.12.1"
actix-web-lab = "0.20.2"
urlencoding = "2.1.3"
url = "2.5.0"
office-converter = "0.1.0"
actix-files = "0.6.5"
anyhow = "1.0.81"
reqwest = "0.11.26"
tokio = "1.36.0"
mime_guess = "2.0.4"

